<resources>
    <string name="app_name">FinanceTracker</string>

    <!-- Buttons -->
    <string name="save">Save</string>
    <string name="abort">Abort</string>
    <string name="add">Add</string>

    <!-- Top bar -->
    <string name="accounts">Accounts</string>
    <string name="transactions">Transactions</string>
    <string name="budgets">Budgets</string>
    <string name="stats">Stats</string>
    <string name="settings">Settings</string>

    <!-- Errors -->
    <string name="mandatory_field">*Mandatory field</string>
    <string name="error_amount_necessary">You need to enter a monetary amount.</string>
    <string name="field_not_optional">This field cannot be empty.</string>
    <string name="form_not_completed">Please fill out all necessary fields.</string>

    <!-- Create new account -->
    <string name="account_list_empty">No accounts available. Add a new account by clicking the plus sign.</string>
    <string name="add_account">Create new account</string>
    <string name="account_type">Account type</string>
    <string name="credit_card_type">Credit card type</string>
    <string name="credit_card_issuer">Issuer</string>
    <string name="credit_card_issuer_description">Issuer of your credit card</string>
    <string name="credit_card_number">Credit card number</string>
    <string name="credit_card_number_helper_text">Last 4 digits of the card</string>
    <string name="account_name">Name</string>
    <string name="account_name_description">Name of your account*</string>
    <string name="initial_account_balance">Initial balance</string>

    <string name="cash">Cash</string>
    <string name="bank_account">Bank account</string>
    <string name="savings">Savings account</string>
    <string name="credit_card">Credit card</string>
    <string name="credit_card_limit">Credit card limit</string>
    <string name="bank_name">Bank name</string>
    <string name="currency">Currency</string>

    <!-- Credit card types -->
    <string name="visa">Visa</string>
    <string name="mastercard">MasterCard</string>

    <string name="point_separator">.</string>
    <string name="comma_separator">,</string>

    <string name="menu">Menu</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>

    <string name="delete_alert_description">Are you sure you want to delete this account?</string>
    <string name="decline">Cancel</string>
    <string name="accept">Delete</string>

</resources>