<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/add_account"
            android:textSize="@dimen/add_account_title_font_size"
            android:paddingStart="@dimen/title_bar_padding_horizontal"
            android:paddingEnd="@dimen/title_bar_padding_horizontal"
            android:paddingTop="@dimen/title_bar_padding_vertical"
            android:paddingBottom="@dimen/title_bar_padding_vertical"
            android:layout_marginTop="0dp"
            android:layout_marginBottom="5dp"
            android:textColor="@color/white"
            android:background="@color/titlebar_grey" />

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <Spinner
                    android:id="@+id/account_type_dropdown"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="start"
                    android:dropDownWidth="match_parent"
                    android:minHeight="48dp"
                    android:spinnerMode="dropdown" />

                <!-- This block is only visible if the selected account type is credit card -->
                <androidx.fragment.app.FragmentContainerView
                    android:id="@+id/credit_card_details_fragment"
                    android:layout_gravity="end"
                    android:name="de.efischer.financetracker.accounts.ui.addaccount.CreditCardDetailsFragment"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingTop="2dp"
                    android:paddingBottom="2dp" />
                <!-- End of credit card block -->

                <!-- This bank name block is only visible if the selected account is not a cash account -->
                <androidx.fragment.app.FragmentContainerView
                    android:id="@+id/bank_name_input_fragment"
                    android:layout_gravity="end"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingTop="5dp" />
                <!-- End of bank name block -->

                <androidx.fragment.app.FragmentContainerView
                    android:id="@+id/account_name_input_fragment"
                    android:layout_gravity="end"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingTop="5dp" />

                <androidx.fragment.app.FragmentContainerView
                    android:id="@+id/amount_input_fragment"
                    android:layout_gravity="end"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingTop="5dp"
                    android:paddingBottom="2dp" />

                <!-- This block is only visible if the selected account type is credit card -->
                <androidx.fragment.app.FragmentContainerView
                    android:id="@+id/credit_card_limit_fragment"
                    android:layout_gravity="end"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingTop="5dp"
                    android:paddingBottom="5dp" />
                <!-- End of credit card block -->
            </LinearLayout>
        </ScrollView>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center">

            <Button
                android:id="@+id/abort_button"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:layout_gravity="center"
                android:text="@string/abort"
                style="?android:attr/buttonBarButtonStyle" />

            <Button
                android:id="@+id/save_button"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:layout_gravity="center"
                android:text="@string/save"
                style="?android:attr/buttonBarButtonStyle" />

        </LinearLayout>

    </LinearLayout>
</layout>